--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4.1.5
       - name: Build and deploy
         run: |
-          dotnet publish -c Release -o publish
+          dotnet publish ./me/me.csproj -c Release -o publish
           echo 'wwwroot' > publish/.nojekyll
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.1
