--- a/me/me.csproj
+++ b/me/me.csproj
@@ -4,16 +4,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1af290ef-d936-4fd9-93e5-3cb8cbe3bb18</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.*-*" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.*-*" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.*-* " />
 	  <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.*-* " />
-	  <PackageReference Include="Syncfusion.Blazor.Core" Version="25.2.3" />
-    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="25.2.3" />
+	  <PackageReference Include="Syncfusion.Blazor" Version="26.2.4" />
+	  <PackageReference Include="Syncfusion.Blazor.Themes" Version="26.2.4" />
   </ItemGroup>
 
   <ItemGroup>
