Add roles and tags management, update UI components
- **README.md**: Added "Resources & Helpful links" section with a link to a blog post about Blazorwasm and AddHttpClient.
- **ExcelFileService.cs**:
  - Renamed `Role` to `RoleId` in `Tag` class.
  - Added logic to initialize and populate `Roles` in `LoadData`.
  - Implemented `GetRolesAsync` method.
- **TimeSpanJsonConverter.cs**: Modified `Read` method to handle both '.' and ',' as delimiters.
- **Data.cs**:
  - Changed `Providers`, `Resources`, `Tags`, and `ResourceTags` to lists.
  - Added `[JsonIgnore]` property `Roles`.
- **Resource.cs**: Formatting adjustments.
- **ResourceTag.cs**: Added computed property `WeightedExperience`.
- **Role.cs**: Introduced `Role` class inheriting from `SelectableBase`.
- **SelectableBase.cs**: Introduced abstract class `SelectableBase`.
- **Tag.cs**:
  - Inherited from `SelectableBase`.
  - Renamed `Role` to `RoleId`.
  - Added virtual property `Role` and computed properties `IsHighlighted` and `WeightedExperience`.
- **ResourceList.razor**:
  - Replaced grid display with list view.
  - Updated to use `Items` instead of `Resources`.
  - Added `GetResourceHeader` method.
- **RoleList.razor**: Introduced component to display roles with selection and clearing functionality.
- **TagList.razor**: Introduced component to display tags with selection and clearing functionality.
- **XPCounter.razor**: Introduced component to display total experience points.
- **IExcelFileService.cs**: Added `GetRolesAsync` method to interface.
- **AboutMe.razor**:
  - Updated layout to include new components.
  - Added spinner for loading state.
  - Implemented logic to display total experience points.
- **_Imports.razor**: Added using directives for new components.
- **me.csproj**: Updated project file to include new folders for components and pages.
- **General**: Various formatting and minor adjustments across multiple files.

--- a/me/me.csproj
+++ b/me/me.csproj
@@ -22,8 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Components\" />
     <Folder Include="Components\Resource\" />
+    <Folder Include="Components\Role\NewFolder\" />
+    <Folder Include="Pages\NewFolder\" />
   </ItemGroup>
 
 </Project>
