Add Bing site verification via XML and meta tag
Updated `me.csproj` to include `BingSiteAuth.xml` in output.
Added `BingSiteAuth.xml` with Bing verification code.
Modified `index.html` to include Bing site validation meta tag.

--- a/me/me.csproj
+++ b/me/me.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\me.shared\me.shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\BingSiteAuth.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
