--- a/me/me.csproj
+++ b/me/me.csproj
@@ -26,6 +26,9 @@
     <Content Update="wwwroot\BingSiteAuth.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\ABOUT.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
